# ML_storage

./: README.md  pyproject.toml
ML_storage/: __init__.py  __main__.py
ML_storage/app/: ___init__.py
ML_storage/domain/: interfaces.py  repositories.py  types.py
