[tool.poetry]
name = "ml_storage"
version = "0.1.0"
description = ""
authors = ["Konrad Ruciński <konradR1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
